// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delegation operation Build operation (Desugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 71))
            storage (unit)
            storage_type ((unknown 0))
            messages ((ep1 True False False True (\\"operation.test.ts\\" 74) ((set_type (params (\\"operation.test.ts\\" 74)) \\"unit\\" (\\"operation.test.ts\\" 85)) (set (operations (\\"operation.test.ts\\" 74)) (cons (set_delegate (variant \\"Some\\" (literal (key_hash tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 74)) (\\"operation.test.ts\\" 74)) (\\"operation.test.ts\\" 74)) (operations (\\"operation.test.ts\\" 74)) (\\"operation.test.ts\\" 74)) (\\"operation.test.ts\\" 74)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 71))
        )
        "
`;

exports[`Delegation operation Build operation (Desugared version) 2`] = `
"{
    \\"micheline\\": \\"parameter (unit %ep1);\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    # == ep1 ==\\\\n    # sp.set_delegate(sp.some(sp.key_hash('tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN'))) # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PUSH (option key_hash) (Some \\\\\\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\\\\\"); # option key_hash : list operation : @storage\\\\n    SET_DELEGATE; # operation : list operation : @storage\\\\n    CONS;       # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"option\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"key_hash\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"Some\\",
                                \\"args\\": [
                                    {
                                        \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                                    }
                                ]
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"SET_DELEGATE\\"
                    },
                    {
                        \\"prim\\": \\"CONS\\"
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;

exports[`Delegation operation Build operation to clear the delegation (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 97))
            storage (unit)
            storage_type ((unknown 0))
            messages ((ep1 True False False True (\\"operation.test.ts\\" 99) ((set_type (params (\\"operation.test.ts\\" 99)) \\"unit\\" (\\"operation.test.ts\\" 101)) (set (operations (\\"operation.test.ts\\" 99)) (cons (set_delegate (variant \\"None\\" (unit) (\\"operation.test.ts\\" 99)) (\\"operation.test.ts\\" 99)) (operations (\\"operation.test.ts\\" 99)) (\\"operation.test.ts\\" 99)) (\\"operation.test.ts\\" 99)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 97))
        )
        "
`;

exports[`Delegation operation Build operation to clear the delegation (Sugared version) 2`] = `
"{
    \\"micheline\\": \\"parameter (unit %ep1);\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    # == ep1 ==\\\\n    # sp.set_delegate(sp.none) # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    NONE key_hash; # option key_hash : list operation : @storage\\\\n    SET_DELEGATE; # operation : list operation : @storage\\\\n    CONS;       # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"NONE\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"key_hash\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"SET_DELEGATE\\"
                    },
                    {
                        \\"prim\\": \\"CONS\\"
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;

exports[`Delegation operation Build operation to set delegator (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 88))
            storage (unit)
            storage_type ((unknown 0))
            messages ((ep1 True False False True (\\"operation.test.ts\\" 91) ((set_type (params (\\"operation.test.ts\\" 91)) \\"key_hash\\" (\\"operation.test.ts\\" 94)) (set (operations (\\"operation.test.ts\\" 91)) (cons (set_delegate (variant \\"Some\\" (params (\\"operation.test.ts\\" 91)) (\\"operation.test.ts\\" 91)) (\\"operation.test.ts\\" 91)) (operations (\\"operation.test.ts\\" 91)) (\\"operation.test.ts\\" 91)) (\\"operation.test.ts\\" 91)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 88))
        )
        "
`;

exports[`Delegation operation Build operation to set delegator (Sugared version) 2`] = `
"{
    \\"micheline\\": \\"parameter (key_hash %ep1);\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    UNPAIR;     # @parameter : @storage\\\\n    # == ep1 ==\\\\n    # sp.set_delegate(sp.some(params)) # @parameter : @storage\\\\n    SOME;       # option key_hash : @storage\\\\n    SET_DELEGATE; # operation : @storage\\\\n    NIL operation; # list operation : operation : @storage\\\\n    SWAP;       # operation : list operation : @storage\\\\n    CONS;       # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"key_hash\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"UNPAIR\\"
                    },
                    {
                        \\"prim\\": \\"SOME\\"
                    },
                    {
                        \\"prim\\": \\"SET_DELEGATE\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"SWAP\\"
                    },
                    {
                        \\"prim\\": \\"CONS\\"
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;

exports[`Origination operation Build operation (Desugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 107))
            storage (unit)
            storage_type ((unknown 0))
            messages ((ep1 True False False True (\\"operation.test.ts\\" 110) ((set_type (params (\\"operation.test.ts\\" 110)) \\"unit\\" (\\"operation.test.ts\\" 118)) (set (operations (\\"operation.test.ts\\" 110)) (cons (attr (create_contract (contract 
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 110))
            storage ()
            storage_type ((unknown 0))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 110))
        )
        ) (storage (unit)) (baker (variant \\"None\\" (unit) (\\"operation.test.ts\\" 110))) (amount (literal (mutez 0) (\\"operation.test.ts\\" 110))) (\\"operation.test.ts\\" 110)) \\"operation\\" (\\"operation.test.ts\\" 110)) (operations (\\"operation.test.ts\\" 110)) (\\"operation.test.ts\\" 110)) (\\"operation.test.ts\\" 110)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 107))
        )
        "
`;

exports[`Origination operation Build operation (Desugared version) 2`] = `
"{
    \\"micheline\\": \\"parameter (unit %ep1);\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    UNPAIR;     # @parameter : @storage\\\\n    # == ep1 ==\\\\n    # sp.operations().push(create contract ....operation) # @parameter : @storage\\\\n    NIL operation; # list operation : @parameter : @storage\\\\n    DUP;        # list operation : list operation : @parameter : @storage\\\\n    UNIT;       # unit : list operation : list operation : @parameter : @storage\\\\n    PUSH mutez 0; # mutez : unit : list operation : list operation : @parameter : @storage\\\\n    NONE key_hash; # option key_hash : mutez : unit : list operation : list operation : @parameter : @storage\\\\n    CREATE_CONTRACT\\\\n     { parameter unit;\\\\n       storage   unit;\\\\n       code\\\\n         {\\\\n           CDR;        # @storage\\\\n           NIL operation; # list operation : @storage\\\\n           PAIR;       # pair (list operation) @storage\\\\n         }}; # operation : address : list operation : list operation : @parameter : @storage\\\\n    SWAP;       # address : operation : list operation : list operation : @parameter : @storage\\\\n    DROP;       # operation : list operation : list operation : @parameter : @storage\\\\n    DIG 2;      # list operation : operation : list operation : @parameter : @storage\\\\n    DROP;       # operation : list operation : @parameter : @storage\\\\n    DIG 2;      # @parameter : operation : list operation : @storage\\\\n    DROP;       # operation : list operation : @storage\\\\n    CONS;       # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"UNPAIR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"DUP\\"
                    },
                    {
                        \\"prim\\": \\"UNIT\\"
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"mutez\\"
                            },
                            {
                                \\"int\\": \\"0\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"NONE\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"key_hash\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"CREATE_CONTRACT\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"parameter\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"unit\\"
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"storage\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"unit\\"
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"code\\",
                                    \\"args\\": [
                                        [
                                            {
                                                \\"prim\\": \\"CDR\\"
                                            },
                                            {
                                                \\"prim\\": \\"NIL\\",
                                                \\"args\\": [
                                                    {
                                                        \\"prim\\": \\"operation\\"
                                                    }
                                                ]
                                            },
                                            {
                                                \\"prim\\": \\"PAIR\\"
                                            }
                                        ]
                                    ]
                                }
                            ]
                        ]
                    },
                    {
                        \\"prim\\": \\"SWAP\\"
                    },
                    {
                        \\"prim\\": \\"DROP\\"
                    },
                    {
                        \\"prim\\": \\"DIG\\",
                        \\"args\\": [
                            {
                                \\"int\\": \\"2\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"DROP\\"
                    },
                    {
                        \\"prim\\": \\"DIG\\",
                        \\"args\\": [
                            {
                                \\"int\\": \\"2\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"DROP\\"
                    },
                    {
                        \\"prim\\": \\"CONS\\"
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;

exports[`Origination operation Build operation (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 121))
            storage (unit)
            storage_type ((unknown 0))
            messages ((ep1 True False False True (\\"operation.test.ts\\" 124) ((set_type (params (\\"operation.test.ts\\" 124)) \\"unit\\" (\\"operation.test.ts\\" 134)) (set (operations (\\"operation.test.ts\\" 124)) (cons (attr (create_contract (contract 
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 124))
            storage ()
            storage_type ((unknown 0))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 124))
        )
        ) (storage (params (\\"operation.test.ts\\" 124))) (baker (variant \\"Some\\" (literal (key_hash tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 124)) (\\"operation.test.ts\\" 124))) (amount (literal (mutez 100) (\\"operation.test.ts\\" 124))) (\\"operation.test.ts\\" 124)) \\"operation\\" (\\"operation.test.ts\\" 124)) (operations (\\"operation.test.ts\\" 124)) (\\"operation.test.ts\\" 124)) (\\"operation.test.ts\\" 124)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 121))
        )
        "
`;

exports[`Origination operation Build operation (Sugared version) 2`] = `
"{
    \\"micheline\\": \\"parameter (unit %ep1);\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    UNPAIR;     # @parameter : @storage\\\\n    # == ep1 ==\\\\n    # sp.operations().push(create contract ....operation) # @parameter : @storage\\\\n    NIL operation; # list operation : @parameter : @storage\\\\n    DUP;        # list operation : list operation : @parameter : @storage\\\\n    DUP 3;      # @parameter : list operation : list operation : @parameter : @storage\\\\n    PUSH mutez 100; # mutez : @parameter : list operation : list operation : @parameter : @storage\\\\n    PUSH (option key_hash) (Some \\\\\\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\\\\\"); # option key_hash : mutez : @parameter : list operation : list operation : @parameter : @storage\\\\n    CREATE_CONTRACT\\\\n     { parameter unit;\\\\n       storage   unit;\\\\n       code\\\\n         {\\\\n           CDR;        # @storage\\\\n           NIL operation; # list operation : @storage\\\\n           PAIR;       # pair (list operation) @storage\\\\n         }}; # operation : address : list operation : list operation : @parameter : @storage\\\\n    SWAP;       # address : operation : list operation : list operation : @parameter : @storage\\\\n    DROP;       # operation : list operation : list operation : @parameter : @storage\\\\n    DIG 2;      # list operation : operation : list operation : @parameter : @storage\\\\n    DROP;       # operation : list operation : @parameter : @storage\\\\n    DIG 2;      # @parameter : operation : list operation : @storage\\\\n    DROP;       # operation : list operation : @storage\\\\n    CONS;       # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"UNPAIR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"DUP\\"
                    },
                    {
                        \\"prim\\": \\"DUP\\",
                        \\"args\\": [
                            {
                                \\"int\\": \\"3\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"mutez\\"
                            },
                            {
                                \\"int\\": \\"100\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"option\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"key_hash\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"Some\\",
                                \\"args\\": [
                                    {
                                        \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                                    }
                                ]
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"CREATE_CONTRACT\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"parameter\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"unit\\"
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"storage\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"unit\\"
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"code\\",
                                    \\"args\\": [
                                        [
                                            {
                                                \\"prim\\": \\"CDR\\"
                                            },
                                            {
                                                \\"prim\\": \\"NIL\\",
                                                \\"args\\": [
                                                    {
                                                        \\"prim\\": \\"operation\\"
                                                    }
                                                ]
                                            },
                                            {
                                                \\"prim\\": \\"PAIR\\"
                                            }
                                        ]
                                    ]
                                }
                            ]
                        ]
                    },
                    {
                        \\"prim\\": \\"SWAP\\"
                    },
                    {
                        \\"prim\\": \\"DROP\\"
                    },
                    {
                        \\"prim\\": \\"DIG\\",
                        \\"args\\": [
                            {
                                \\"int\\": \\"2\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"DROP\\"
                    },
                    {
                        \\"prim\\": \\"DIG\\",
                        \\"args\\": [
                            {
                                \\"int\\": \\"2\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"DROP\\"
                    },
                    {
                        \\"prim\\": \\"CONS\\"
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;

exports[`Transaction operation Build operation (Desugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 23))
            storage (unit)
            storage_type ((unknown 0))
            messages ((ep1 True False False True (\\"operation.test.ts\\" 26) ((set_type (params (\\"operation.test.ts\\" 26)) \\"unit\\" (\\"operation.test.ts\\" 37)) (set (operations (\\"operation.test.ts\\" 26)) (cons (transfer (params (\\"operation.test.ts\\" 26)) (literal (mutez 100) (\\"operation.test.ts\\" 26)) (openVariant (contract default \\"unit\\" (literal (address tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 26)) (\\"operation.test.ts\\" 26)) \\"Some\\" (variant \\"Some\\" (literal (string \\"CONTRACT_NOT_FOUND\\") (\\"operation.test.ts\\" 26)) (\\"operation.test.ts\\" 26)) (\\"operation.test.ts\\" 26)) (\\"operation.test.ts\\" 26)) (operations (\\"operation.test.ts\\" 26)) (\\"operation.test.ts\\" 26)) (\\"operation.test.ts\\" 26)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 23))
        )
        "
`;

exports[`Transaction operation Build operation (Desugared version) 2`] = `
"{
    \\"micheline\\": \\"parameter (unit %ep1);\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    UNPAIR;     # @parameter : @storage\\\\n    # == ep1 ==\\\\n    # sp.transfer(params, sp.mutez(100), sp.contract(sp.TUnit, sp.address('tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN'), entry_point='default').open_some(message = sp.some('CONTRACT_NOT_FOUND'))) # @parameter : @storage\\\\n    NIL operation; # list operation : @parameter : @storage\\\\n    PUSH address \\\\\\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\\\\\"; # address : list operation : @parameter : @storage\\\\n    CONTRACT %default unit; # option (contract unit) : list operation : @parameter : @storage\\\\n    IF_NONE\\\\n      {\\\\n        PUSH (option string) (Some \\\\\\"CONTRACT_NOT_FOUND\\\\\\"); # option string : list operation : @parameter : @storage\\\\n        FAILWITH;   # FAILED\\\\n      }\\\\n      {}; # @some : list operation : @parameter : @storage\\\\n    PUSH mutez 100; # mutez : @some : list operation : @parameter : @storage\\\\n    DIG 3;      # @parameter : mutez : @some : list operation : @storage\\\\n    TRANSFER_TOKENS; # operation : list operation : @storage\\\\n    CONS;       # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"UNPAIR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"address\\"
                            },
                            {
                                \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"CONTRACT\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"unit\\"
                            }
                        ],
                        \\"annots\\": [
                            \\"%default\\"
                        ]
                    },
                    {
                        \\"prim\\": \\"IF_NONE\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"PUSH\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"option\\",
                                            \\"args\\": [
                                                {
                                                    \\"prim\\": \\"string\\"
                                                }
                                            ]
                                        },
                                        {
                                            \\"prim\\": \\"Some\\",
                                            \\"args\\": [
                                                {
                                                    \\"string\\": \\"CONTRACT_NOT_FOUND\\"
                                                }
                                            ]
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"FAILWITH\\"
                                }
                            ],
                            []
                        ]
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"mutez\\"
                            },
                            {
                                \\"int\\": \\"100\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"DIG\\",
                        \\"args\\": [
                            {
                                \\"int\\": \\"3\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"TRANSFER_TOKENS\\"
                    },
                    {
                        \\"prim\\": \\"CONS\\"
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;

exports[`Transaction operation Build operation (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 40))
            storage (unit)
            storage_type ((unknown 0))
            messages ((ep1 True False False True (\\"operation.test.ts\\" 43) ((set_type (params (\\"operation.test.ts\\" 43)) \\"unit\\" (\\"operation.test.ts\\" 48)) (set (operations (\\"operation.test.ts\\" 43)) (cons (transfer (unit) (literal (mutez 100) (\\"operation.test.ts\\" 43)) (openVariant (contract default \\"unit\\" (literal (address tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 43)) (\\"operation.test.ts\\" 43)) \\"Some\\" (variant \\"Some\\" (literal (string \\"CONTRACT_NOT_FOUND\\") (\\"operation.test.ts\\" 43)) (\\"operation.test.ts\\" 43)) (\\"operation.test.ts\\" 43)) (\\"operation.test.ts\\" 43)) (operations (\\"operation.test.ts\\" 43)) (\\"operation.test.ts\\" 43)) (\\"operation.test.ts\\" 43)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 40))
        )
        "
`;

exports[`Transaction operation Build operation (Sugared version) 2`] = `
"{
    \\"micheline\\": \\"parameter (unit %ep1);\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    # == ep1 ==\\\\n    # sp.transfer(sp.unit, sp.mutez(100), sp.contract(sp.TUnit, sp.address('tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN'), entry_point='default').open_some(message = sp.some('CONTRACT_NOT_FOUND'))) # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PUSH address \\\\\\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\\\\\"; # address : list operation : @storage\\\\n    CONTRACT %default unit; # option (contract unit) : list operation : @storage\\\\n    IF_NONE\\\\n      {\\\\n        PUSH (option string) (Some \\\\\\"CONTRACT_NOT_FOUND\\\\\\"); # option string : list operation : @storage\\\\n        FAILWITH;   # FAILED\\\\n      }\\\\n      {}; # @some : list operation : @storage\\\\n    PUSH mutez 100; # mutez : @some : list operation : @storage\\\\n    UNIT;       # unit : mutez : @some : list operation : @storage\\\\n    TRANSFER_TOKENS; # operation : list operation : @storage\\\\n    CONS;       # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"address\\"
                            },
                            {
                                \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"CONTRACT\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"unit\\"
                            }
                        ],
                        \\"annots\\": [
                            \\"%default\\"
                        ]
                    },
                    {
                        \\"prim\\": \\"IF_NONE\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"PUSH\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"option\\",
                                            \\"args\\": [
                                                {
                                                    \\"prim\\": \\"string\\"
                                                }
                                            ]
                                        },
                                        {
                                            \\"prim\\": \\"Some\\",
                                            \\"args\\": [
                                                {
                                                    \\"string\\": \\"CONTRACT_NOT_FOUND\\"
                                                }
                                            ]
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"FAILWITH\\"
                                }
                            ],
                            []
                        ]
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"mutez\\"
                            },
                            {
                                \\"int\\": \\"100\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"UNIT\\"
                    },
                    {
                        \\"prim\\": \\"TRANSFER_TOKENS\\"
                    },
                    {
                        \\"prim\\": \\"CONS\\"
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;

exports[`Transaction operation Build operation to an originated contract 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 51))
            storage (unit)
            storage_type ((unknown 0))
            messages ((ep1 True False False True (\\"operation.test.ts\\" 54) ((set_type (params (\\"operation.test.ts\\" 54)) \\"nat\\" (\\"operation.test.ts\\" 65)) (set (operations (\\"operation.test.ts\\" 56)) (cons (transfer (params (\\"operation.test.ts\\" 54)) (literal (mutez 100) (\\"operation.test.ts\\" 56)) (openVariant (contract ep1 \\"nat\\" (literal (address KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT) (\\"operation.test.ts\\" 56)) (\\"operation.test.ts\\" 56)) \\"Some\\" (variant \\"Some\\" (literal (string \\"CONTRACT_NOT_FOUND\\") (\\"operation.test.ts\\" 56)) (\\"operation.test.ts\\" 56)) (\\"operation.test.ts\\" 56)) (\\"operation.test.ts\\" 56)) (operations (\\"operation.test.ts\\" 56)) (\\"operation.test.ts\\" 56)) (\\"operation.test.ts\\" 56)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 51))
        )
        "
`;

exports[`Transaction operation Build operation to an originated contract 2`] = `
"{
    \\"micheline\\": \\"parameter (nat %ep1);\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    UNPAIR;     # @parameter : @storage\\\\n    # == ep1 ==\\\\n    # sp.transfer(params, sp.mutez(100), sp.contract(sp.TNat, sp.address('KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT'), entry_point='ep1').open_some(message = sp.some('CONTRACT_NOT_FOUND'))) # @parameter : @storage\\\\n    NIL operation; # list operation : @parameter : @storage\\\\n    PUSH address \\\\\\"KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT\\\\\\"; # address : list operation : @parameter : @storage\\\\n    CONTRACT %ep1 nat; # option (contract nat) : list operation : @parameter : @storage\\\\n    IF_NONE\\\\n      {\\\\n        PUSH (option string) (Some \\\\\\"CONTRACT_NOT_FOUND\\\\\\"); # option string : list operation : @parameter : @storage\\\\n        FAILWITH;   # FAILED\\\\n      }\\\\n      {}; # @some : list operation : @parameter : @storage\\\\n    PUSH mutez 100; # mutez : @some : list operation : @parameter : @storage\\\\n    DIG 3;      # @parameter : mutez : @some : list operation : @storage\\\\n    TRANSFER_TOKENS; # operation : list operation : @storage\\\\n    CONS;       # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"nat\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"UNPAIR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"address\\"
                            },
                            {
                                \\"string\\": \\"KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"CONTRACT\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"nat\\"
                            }
                        ],
                        \\"annots\\": [
                            \\"%ep1\\"
                        ]
                    },
                    {
                        \\"prim\\": \\"IF_NONE\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"PUSH\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"option\\",
                                            \\"args\\": [
                                                {
                                                    \\"prim\\": \\"string\\"
                                                }
                                            ]
                                        },
                                        {
                                            \\"prim\\": \\"Some\\",
                                            \\"args\\": [
                                                {
                                                    \\"string\\": \\"CONTRACT_NOT_FOUND\\"
                                                }
                                            ]
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"FAILWITH\\"
                                }
                            ],
                            []
                        ]
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"mutez\\"
                            },
                            {
                                \\"int\\": \\"100\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"DIG\\",
                        \\"args\\": [
                            {
                                \\"int\\": \\"3\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"TRANSFER_TOKENS\\"
                    },
                    {
                        \\"prim\\": \\"CONS\\"
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;
